# neojambu

./: .buildpacks  .gitignore  CI-README.md  Procfile  README.md  app.json  app.py  benchmark.py  cldf  main.py  make_database.py  models.py  pyproject.toml  requirements.txt  search.py  test_ci_setup.py  test_performance.py  test_summary.py  test_webapp.py  verify_deployment.py
.github/workflows/: ci.yml  pr.yml  release.yml
cldf/: languages.csv
deployment/: Procfile  release.sh
docs/: DEPLOYMENT.md
flask/: app.py  make_database.py
flask/templates/: entries.html  head.html
scripts/: main.py  make_database.py  verify_deployment.py
src/neojambu/: __init__.py  app.py  models.py  search.py
src/static/: style.css
src/templates/: compare.html  entries.html  entry.html  foot.html  index.html  langs.html  reflex.html  reflexes.html
static/: style.css
templates/: compare.html  entries.html  entry.html  foot.html  head.html  index.html  langs.html  reference.html  references.html  reflex.html  reflexes.html  scripts.js
tests/: test_performance.py  test_summary.py  test_webapp.py
